--- a/testFlexbox2.html
+++ b/testFlexbox2.html
@@ -9,8 +9,9 @@
         margin:0;
     }
     .container{
-        background-color: rgb(236,234,236);
-        width: 100%;
+        background-color: #eceaec;
+        /*width: 100%;*/
+        width: 600px;
         height: 400px;
         margin: 0 auto;
         margin-top:100px;
@@ -43,9 +44,9 @@
         /*flex-flow: column nowrap;*/
         /*justify-content: space-between;*/
         /*align-items:center;*/
-        flex-wrap: wrap;
+        flex-flow:column wrap;
         justify-content: space-between;
-        align-content: flex-start;
+        align-items: flex-end;
     }
     .item{
         height: 50px;
@@ -53,24 +54,22 @@
         text-align: center;
         color:#fff;
         font-size: 20px;
-        width: 32%;
-        margin-bottom: 2%;
+        width: 50px;
+        /*width: 32%;*/
+        /*margin-bottom: 2%;*/
     }
-
-@media screen and (min-width:960px) {
-    .item {
-        margin-bottom: 1.2%;
-    }
-}
-
     .item:nth-child(1){
         /*width: 200px;*/
         /*height: 80px;*/
         background-color: #6f5499;
+        align-self: center;
+        /*order:1000;*/
+        flex-shrink: 10;
     }
     .item:nth-child(2){
         /*width:200px;*/
         background-color: #0275d8;
+        /*order:999;*/
     }
     .item:nth-child(3){
         /*width: 200px;*/
