--- a/tesFlexbox.html
+++ b/tesFlexbox.html
@@ -26,16 +26,28 @@
     /*flex-direction: column;*/
   }
   .menus li{
-    width: 21%;
-    /*height: 21%;*/
     display: flex;
-    border:1px red solid;
-    margin:5px;
+    width: 22%;
+    /*border:1px red solid;*/
+    flex:1 0 auto;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    background:url(http://c.diaox2.com/view/app/tool/shampoo.png) 100% 100% no-repeat;
+    background-size: contain;
+    /*margin: 5px;*/
+  }
+  .menus li:before{
+    content: '';
+    /*float: left;*/
+    padding-top: 100%;
   }
 
   .menu li img{
+    width: 100%;
+    height: 100%;
     /*width: 100%; */
-    max-width: 100%; 
+    /*max-width: 100%; */
     /*height: auto;*/
     /*display: block;*/
   }
@@ -51,35 +63,35 @@
 
         <ul class="menus">
             <li>
-                <img src="http://c.diaox2.com/view/app/tool/shampoo.png">
+                <!-- <img src="http://c.diaox2.com/view/app/tool/shampoo.png"> -->
             </li>
 
             <li>
-                <img src="http://c.diaox2.com/view/app/tool/sunblock.png">
+                <!-- <img src="http://c.diaox2.com/view/app/tool/sunblock.png"> -->
             </li>
 
             <li>
-                <img src="http://c.diaox2.com/view/app/tool/cleanser.png">
+                <!-- <img src="http://c.diaox2.com/view/app/tool/cleanser.png"> -->
             </li>
 
             <li>
-                <img src="http://c.diaox2.com/view/app/tool/toner.png">
+                <!-- <img src="http://c.diaox2.com/view/app/tool/toner.png"> -->
             </li>
 
             <li>
-                <img src="http://c.diaox2.com/view/app/tool/toothpaste.png">
+                <!-- <img src="http://c.diaox2.com/view/app/tool/toothpaste.png"> -->
             </li>
 
             <li>
-                <img src="http://c.diaox2.com/view/app/tool/bodycream.png">
+                <!-- <img src="http://c.diaox2.com/view/app/tool/bodycream.png"> -->
             </li>
 
             <li>
-                <img src="http://c.diaox2.com/view/app/tool/earphone.png">
+                <!-- <img src="http://c.diaox2.com/view/app/tool/earphone.png"> -->
             </li>
 
             <li>
-                <img src="http://c.diaox2.com/view/app/tool/running_shoe.png">
+                <!-- <img src="http://c.diaox2.com/view/app/tool/running_shoe.png"> -->
             </li>
         </ul>
 </div>
